Revised the K2 theme.
- Moved the sidebar to sidebar.php
- Styled the sidebar controls to look all the same
- Added plugin hooks to add content to the sidebar. (theme_sidebar_*, theme_loginform_*, theme_searchform_*, etc.)

Looks good in Firefox, Safari, IE?.
Opera and Camino look weird because of their interpretation. (css)

Khaled/Chris may be bests to make it cross-browser nice.

git-svn-id: http://svn.habariproject.org/habari/trunk@835 653ae4dd-d31e-0410-96ef-6bf7bf53c507

--- a/htdocs/user/themes/k2/style.css
+++ b/htdocs/user/themes/k2/style.css
@@ -789,25 +789,32 @@ ol li {
 
 /*- Search Form and Livesearch */
 
-#searchform {
-	margin-top: 20px;
-	display: block;
-	position: relative;
-	}
-
-#search h2 {
-	display: none;
-	}
-
-input[type=text], textarea {
-	color: #444;
-	padding: 1px;
-	margin: 0;
-	}
-
 #s {
-	width: 79%;
+	width: 12em;
 	}
+#s:focus {
+	border-color: #666;
+}
+	
+#searchsubmit {
+	width: 3em;
+}
+	
+/*- Login Form */
+
+#loginform label {
+	display:block;
+	font-size: 0.9em;
+	font-weight: bold;
+	line-height: 1.5em;
+	color: #777;
+}
+#habari_username, #habari_password {
+	width: 15em;
+}
+#habari_username:focus, #habari_password:focus {
+	border-color: #666;
+}
 
 /* CSS Beyond this point is for various supported plugins and not the 'core' K2 template */
 
