--- a/htdocs/3rdparty/humanmsg/humanmsg.css
+++ b/htdocs/3rdparty/humanmsg/humanmsg.css
@@ -16,11 +16,9 @@ html, body {
 	left: 25%;
 	width: 50%;
 	color: white;
-	background-color: black;
-	text-align: center; 
-	display: none;
-	opacity: 0;
+	text-align: center;
 	z-index: 100000;
+	display: none;
 }
 
 .humanMsg .round {
@@ -31,13 +29,17 @@ html, body {
 
 .humanMsg p {
 	padding: .3em;
-	display: inline; 
+	display: inline;
 	}
 
-.humanMsg a {
+.humanMsg .imsgs .msg {
+	margin-bottom: 5px;
+	background-color: black;
 	display: none;
+	opacity: 0;
 	}
-	
+
+
 #humanMsgLog {
 	font: normal 10px Helvetica, Arial, Sans-Serif;
 	color: white;
@@ -98,7 +100,7 @@ html, body {
 #humanMsgLog ul li:first-child {
 	margin-top: 1px;
 	}
-	
+
 #humanMsgLog ul li .error {
 	color: orangered;
 	}
