--- a/htdocs/3rdparty/humanmsg/humanmsg.css
+++ b/htdocs/3rdparty/humanmsg/humanmsg.css
@@ -24,9 +24,12 @@ html, body {
 .humanMsg .imsgs .msg {
 	padding: 10px;
 	background-color: black;
+	border-radius: 5px;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
+	box-shadow: 0px 1px 5px #333;
 	-webkit-box-shadow: 0px 1px 5px #333;
+	-moz-box-shadow: 0px 1px 5px #333;
 	margin-bottom: 5px;
 	}
 
